# static_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
config/: config.json
include/: constants.h  filecachepool.h  hashedwheeltimer.h  httpclienttask.h  httpheaderparser.h  staticserver.h  threadpool.h  utils.h
k8s/: config-volume-pv.yaml  config-volume-pvc.yaml  staticserver-deployment.yaml  staticserver-service.yaml  webresource-volume-pv.yaml  webresource-volume-pvc.yaml
src/: filecachepool.cpp  hashedwheeltimer.cpp  httpclienttask.cpp  httpheaderparser.cpp  staticserver.cpp  threadpool.cpp  utils.cpp
test_result/: result.txt
tests/: CMakeLists.txt  test_filecachepool.cpp  test_hashedwheeltimer.cpp  test_httpheaderparser.cpp  test_system.cpp  test_threadpool.cpp  test_utils.h
wrk/: simu.lua  stress.lua
